# yt-w

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TODO.md  channels.example.json  channels.json  config.json  docker-compose.yml  main.py  monitoring.py  pyproject.toml  pytest.ini  refresh_cookies.bat  update_cookies.bat  web_server.py
.claude/: CLAUDE.md  settings.local.json
docs/: ARCHITECTURE.md  FEATURES.md  REFACTORING_SUMMARY.md  TESTING.md  history.md
plans/: discord-monitoring-plan.md
reviews/: 2026-04-08-prevention-strategy.md
scripts/: check_orphan_pyc.py
src/yt_monitor/: __init__.py  cli.py  (+22 more)
test/: __init__.py  conftest.py  test_alert_cooldown.py  test_channel_manager.py  test_cleanup_scheduler.py  test_config.py  test_cookie_helper.py  test_cookie_notifications.py  test_cookie_options.py  test_cookie_validator.py  test_discord_notifier.py  test_downloader.py  test_ffmpeg_command.py  test_frontend_default_tab.py  test_frontend_merge_download_directory.py  test_frontend_merge_output_name.py  test_frontend_select_all_sequence.py  test_frontend_split.py  test_logger.py  test_merge_order.py  test_monitor.py  test_monitoring_cli.py  test_multi_channel_monitor.py  test_regression_20260408.py  test_split_strategy.py  test_stream_downloader.py  test_video_downloader.py  test_video_splitter.py  test_web_api.py  test_web_api_routes.py  test_youtube_client.py  test_youtube_client_golden_fixtures.py
tests/: __init__.py
web/: app.css  app.js  index.html  merge_download_directory.js  merge_output_name.js
(+100 files in other folders)
