[project]
name = "yt-w"
version = "1.0.0"
description = "YouTube Live Stream Monitor and Downloader"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bgutil-ytdlp-pot-provider>=1.3.1",
    "fastapi>=0.122.0",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.38.0",
    "yt-dlp>=2025.10.22",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
]
